# hatch-vsc

./: .coverage  .deepsource.toml  DESIGN.md  README.md  TESTING.md  codecov.yml  coverage.xml  pyproject.toml
.github/workflows/: release.yml  test.yml
badges/: .gitignore  LICENSE  README.md  RELEASE.md  coverage-badge.json
badges/src/hatch_vsc/: __init__.py  update_vscode_env.py
badges/tests/: test_vscode.py
src/hatch_vsc/: __init__.py  hatch_hooks.py  plugin.py  update_vscode_env.py
tests/: __init__.py  conftest.py  test_config.py  test_hooks.py  test_plugin.py  test_vscode.py
